style: format with spotless